--- a/java/helm/dev/values.yaml
+++ b/java/helm/dev/values.yaml
@@ -1,3 +1,3 @@
 ---
 app:
-  image: quay.io/bit-play/openshift-quickstart:1.0.0-SNAPSHOT
+  image: quay.io/bit-play/openshift-quickstart:202401171947
