--- a/js/frontend/helm/templates/route.yaml
+++ b/js/frontend/helm/templates/route.yaml
@@ -1,14 +1,14 @@
 kind: Route
 apiVersion: route.openshift.io/v1
 metadata:
-  name: {{ include "java-app.fullname" . }}
+  name: {{ include "frontend.fullname" . }}
   labels:
-    {{- include "java-app.labels" . | nindent 4 }}
+    {{- include "frontend.labels" . | nindent 4 }}
 spec:
   path: /
   to:
     kind: Service
-    name: {{ include "java-app.fullname" . }}
+    name: {{ include "frontend.fullname" . }}
     weight: 100
   port:
     targetPort: {{ .Values.service.port }}
