--- a/js/backend/helm/templates/service.yaml
+++ b/js/backend/helm/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "java-app.fullname" . }}
+  name: {{ include "backend.fullname" . }}
   labels:
-    {{- include "java-app.labels" . | nindent 4 }}
+    {{- include "backend.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "java-app.selectorLabels" . | nindent 4 }}
+    {{- include "backend.selectorLabels" . | nindent 4 }}
