--- a/js/backend/helm/values.yaml
+++ b/js/backend/helm/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: quay.io/mmascia/js/backend
+  repository: quay.io/quickstart/js/backend
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: latest
