fix: add postgresql

--- a/java/helm/templates/secret.yaml
+++ b/java/helm/templates/secret.yaml
@@ -8,5 +8,7 @@ metadata:
     {{- include "java-app.labels" . | nindent 4 }}
 type: Opaque
 stringData:
-  {{ .Values.secretData | toYaml }}
+  {{- with .Values.secretData }}
+  {{- tpl (toYaml .) $ | nindent 2 }}
+  {{- end }}
     
