--- a/java/helm/templates/deployment.yaml
+++ b/java/helm/templates/deployment.yaml
@@ -32,6 +32,8 @@ spec:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}
+          command:
+          - /opt/jboss/container/java/run/run-java.sh
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
