--- a/java/helm/values.yaml
+++ b/java/helm/values.yaml
@@ -114,3 +114,36 @@ affinity: {}
 secretData:
   application.properties: |
     # Something to override at runtime
+    quarkus.datasource.jdbc.url=jdbc:postgresql://{{ .Release.Name }}-postgresql:5432/db
+    quarkus.datasource.username=postgres
+
+# PostgreSQL
+postgresql:
+  enabled: True
+  initdb:
+    scripts:
+      schema.sql: |
+        CREATE TABLE messages (
+            id SERIAL PRIMARY KEY,
+            text TEXT
+        );
+    username: postgres
+    password: pass
+  primary:
+    persistence:
+      mountPath: /var/lib/pgsql
+      size: 10Gi
+    resources:
+      requests:
+        cpu: 100m
+        memory: 1Gi
+      limits:
+        cpu: '1'
+        memory: 2Gi
+  postgresqlDataDir: /var/lib/pgsql/data
+  auth:
+    username: postgres
+    postgresPassword: pass
+    postgresqlPostgresPassword: root
+    database: db
+
