feat: add backend name

--- a/js/frontend/helm/templates/configmap.yaml
+++ b/js/frontend/helm/templates/configmap.yaml
@@ -7,6 +7,6 @@ metadata:
 data:
   app.config.json: |
     {
-      "baseUrl": "https://nodejs-backend-{{ .Release.Namespace }}.{{ .Values.baseDomain}}/api"
+      "baseUrl": "https://{{ .Values.backendName}}-{{ .Release.Namespace }}.{{ .Values.baseDomain}}/api"
     }
 
