--- a/js/frontend/helm/values-devspaces-admin.yaml
+++ b/js/frontend/helm/values-devspaces-admin.yaml
@@ -1,3 +1,3 @@
 image:
-  repository: quay.io/quickstart/js
-  tag: devspaces-admin-1309
+  repository: quay.io/quickstart/js/frontend
+  tag: devspaces-admin-1710
