--- a/golang/helm/values-devspaces-admin.yaml
+++ b/golang/helm/values-devspaces-admin.yaml
@@ -1,3 +1,3 @@
 image:
-  repository: quay.io/quickstart/golang
-  tag: devspaces-admin-1059
+  repository: quay.io/quickstart/golang/server
+  tag: devspaces-admin-1842
