fix: helm chart

--- a/js/backend/helm/templates/secret.yaml
+++ b/js/backend/helm/templates/secret.yaml
@@ -11,8 +11,8 @@ stringData:
   config.json: |
     {
         "database": {
-          "user": "user",
-          "host": "postgres",
+          "user": "postgres",
+          "host": "{{ .Release.Name }}-postgresql",
           "database": "db",
           "password": "pass",
           "port": 5432
