--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,75 @@
-#Maven
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-release.properties
-.flattened-pom.xml
+# Created by https://www.toptal.com/developers/gitignore/api/helm,visualstudiocode,macos,linux
+# Edit at https://www.toptal.com/developers/gitignore?templates=helm,visualstudiocode,macos,linux
 
-# Eclipse
-.project
-.classpath
-.settings/
-bin/
+### Helm ###
+# Chart dependencies
+**/charts/*.tgz
 
-# IntelliJ
-.idea
-*.ipr
-*.iml
-*.iws
+### Linux ###
+*~
 
-# NetBeans
-nb-configuration.xml
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
 
-# Visual Studio Code
-.vscode
-.factorypath
+# KDE directory preferences
+.directory
 
-# OSX
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+# .nfs files are created when an open file is removed but is still being accessed
+.nfs*
+
+### macOS ###
+# General
 .DS_Store
+.AppleDouble
+.LSOverride
 
-# Vim
-*.swp
-*.swo
+# Icon must end with two \r
+Icon
 
-# patch
-*.orig
-*.rej
 
-# Local environment
-.env
+# Thumbnails
+._*
 
-# Plugin directory
-/.quarkus/cli/plugins/
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
 
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+### macOS Patch ###
+# iCloud generated files
+*.icloud
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
 .history
+.ionide
+
+# End of https://www.toptal.com/developers/gitignore/api/helm,visualstudiocode,macos,linux
